--- a/yycgproject/pom.xml
+++ b/yycgproject/pom.xml
@@ -1,18 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<!-- 父模块的相对路径， 父模块目录 中要有pom.xml -->
+<!-- 	<parent>
+		父模块的相对路径， 父模块目录 中要有pom.xml
 		<relativePath>../yycgparent</relativePath>
 		<groupId>yycg</groupId>
 		<artifactId>yycgparent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+	</parent> -->
 
-	<!-- <groupId>yycg</groupId> -->
+	<groupId>yycg</groupId>
 	<artifactId>yycgproject</artifactId>
 	<packaging>war</packaging>
-	<!-- <version>0.0.1-SNAPSHOT</version> -->
+	<version>0.0.1-SNAPSHOT</version>
 	<name>yycgproject Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
