--- a/yycgutil/pom.xml
+++ b/yycgutil/pom.xml
@@ -2,17 +2,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <parent>
-		<!-- 父模块的相对路径， 父模块目录 中要有pom.xml -->
+<!--   <parent>
+		父模块的相对路径， 父模块目录 中要有pom.xml
 		<relativePath>../yycgparent</relativePath>
 		<groupId>yycg</groupId>
 		<artifactId>yycgparent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+	</parent> -->
 
-  <!-- <groupId>yycg</groupId> -->
+  <groupId>yycg</groupId>
   <artifactId>yycgutil</artifactId>
-  <!-- <version>0.0.1-SNAPSHOT</version> -->
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>yycgutil</name>
